# contextlayer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml
apps/capture-extension/: manifest.json  options.html  package.json  preview.html  tsconfig.json
apps/capture-extension/src/: options.ts  preview.ts  service-worker.ts
apps/context-agent/: .env.example  package.json  tsconfig.json
apps/context-agent/src/: auth.ts  index.ts
apps/context-agent/src/lib/: access-policy.test.ts  access-policy.ts  background-jobs.ts  caller.ts  capture-ingestion.ts  capture-redaction.test.ts  capture-redaction.ts  chat.ts  chunking.ts  confluence-sync.ts  confluence.ts  connections.ts  connector-contract.test.ts  connector-oauth.ts  connector-sync.ts  design-import.test.ts  figma.ts  (+31 more)
apps/desktop/: package.json  tsconfig.json
apps/desktop/scripts/: desktop-runtime.test.ts  dmg.ts  media-extractor.swift  postgres-bundle.ts  prepare.ts  prototype-compiler.ts  resource-gate.ts
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/studio/: components.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/studio/app/: globals.css  layout.tsx  page.tsx
apps/studio/components/: canvas-workspace.tsx  context-source-controls.tsx
apps/studio/e2e/: canvas-workflow.spec.ts
apps/studio/lib/: api.ts  auth-client.ts  use-caller.ts
(+95 files in other folders)
